# linjap

./: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
dicts/: genki.dict  kana.dict
src/: Av.hpp  Data.cpp  Data.hpp  Engine.cpp  Engine.hpp  FileReader.cpp  FileReader.hpp  HelpWindow.cpp  HelpWindow.hpp  LLNNode.cpp  LLNNode.hpp  LList.cpp  LList.hpp  LListNode.cpp  LListNode.hpp  MainWindow.cpp  MainWindow.hpp  Makefile.am  Makefile.in  Mode.cpp  Mode.hpp  Mode_eng_jap.cpp  Mode_eng_jap.hpp  NeWindow.cpp  NeWindow.hpp  PopWindow.cpp  PopWindow.hpp  Queue.cpp  Queue.hpp  Word.cpp  Word.hpp  main.cpp
