dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(linjap, 2.0.5, linjap.berlios.de)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC






AM_PROG_LIBTOOL



PKG_CHECK_MODULES(LINJAP, [gtkmm-2.4 >= 2.12    ])




AC_OUTPUT([
Makefile
src/Makefile

])
